# simple_saas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
simple_saas/: 0_supabase_simple_oauth.py  1_supabase_panel_simple_oauth.py
simple_saas/1_supabase_multitenant_users/: 1_supabase_multitenant_users.py  migration1.sql  migration2.sql  migration3_sampledata.sql
simple_saas/2_supabase_multitenant_users/: 2_supabase_multitenant_users.py  migration1.sql  migration_sampledata.sql
simple_saas/3_supabase_full_demo/: 3_supabase_full_demo.py
simple_saas/3_supabase_multitenant_admin/: 3_supabase_multitenant_admin.py  migration1.sql  migration_sampledata.sql
simple_saas/3_supabase_multitenant_users/: migration1.sql  migration_sampledata.sql
simple_saas/4_supabase_multitenant_impersonation/: 4_supabase_multitenant_impersonation.py  README.md  migration1.sql  migration2_impersonation.sql  migration3_hmac_audit.sql  migration4_projects.sql  reset_db.sql
