[tool.poetry]
name = "simple_saas"
version = "0.1.0"
description = ""
authors = ["emunsing <eric.munsing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
openpyxl = "*"
attrs = "*"
cattrs = "*"
starlette = "0.52.1"
fastapi = "0.129.0"
bokeh-fastapi= "0.1.5"
bokeh = "3.8.2"
panel = {extras = ["fastapi"], version = "1.8.7"}
uvicorn = "*"
fastapi-users = {extras = ["sqlalchemy"], version = "*"}
sqlalchemy = "*"
asyncpg = "*"
alembic = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
python-multipart = "*"
pydantic = {extras = ["email"], version = "*"}
python-dotenv = "*"
httpx = "*"
supabase = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
